--- a/Aula04/formatacao.html
+++ b/Aula04/formatacao.html
@@ -5,18 +5,24 @@
   <title>Formatação de Texto em HTML</title>
 </head>
 <body>
-  <h1>O que é Formatação de Texto em HTML?</h1>
-  <p>Existem várias tags de formatação em HTML para destacar partes do texto.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;b&gt;Negrito&lt;/b&gt; ou &lt;strong&gt;Importante&lt;/strong&gt;
-&lt;i&gt;Itálico&lt;/i&gt; ou &lt;em&gt;Ênfase&lt;/em&gt;
-  </pre>
+    <header></header>
+    <main>
+        <h1>O que é Formatação de Texto em HTML?</h1>
+        <p>Existem várias tags de formatação em HTML para destacar partes do texto.</p>
 
-  <p><b>Negrito</b> e <strong>Importante</strong></p>
-  <p><i>Itálico</i> e <em>Ênfase</em></p>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;b&gt;Negrito&lt;/b&gt; ou &lt;strong&gt;Importante&lt;/strong&gt;
+            &lt;i&gt;Itálico&lt;/i&gt; ou &lt;em&gt;Ênfase&lt;/em&gt;
+        </pre>
 
-  <a href="index.html">Página Inicial</a>
+        <p><b>Negrito</b> e <strong>Importante</strong></p>
+        <p><i>Itálico</i> e <em>Ênfase</em></p>
+
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
