--- a/Aula04/imagens.html
+++ b/Aula04/imagens.html
@@ -5,16 +5,21 @@
   <title>Imagens em HTML</title>
 </head>
 <body>
-  <h1>O que são Imagens em HTML?</h1>
-  <p>O elemento <code>&lt;img&gt;</code> é usado para inserir imagens em uma página web.</p>
+    <header></header>
+    <main>
+        <h1>O que são Imagens em HTML?</h1>
+        <p>O elemento <code>&lt;img&gt;</code> é usado para inserir imagens em uma página web.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;img src="https://via.placeholder.com/150" alt="Exemplo de imagem"&gt;
-  </pre>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;img src="https://via.placeholder.com/150" alt="Exemplo de imagem"&gt;
+        </pre>
 
-  <img src="img/html.png" alt="Exemplo de imagem">
+        <img src="img/html.png" alt="Exemplo de imagem">
 
-  <a href="index.html">Página Inicial</a>
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
