--- a/Aula04/index.html
+++ b/Aula04/index.html
@@ -5,15 +5,21 @@
   <title>Menu de Elementos HTML</title>
 </head>
 <body>
-  <h1>Menu de Estudos de HTML</h1>
-  <ul>
-    <li><a href="titulo.html">Título</a></li>
-    <li><a href="subtitulo.html">Subtítulo</a></li>
-    <li><a href="paragrafos.html">Parágrafos</a></li>
-    <li><a href="formatacao.html">Formatação de Texto</a></li>
-    <li><a href="imagens.html">Imagens</a></li>
-    <li><a href="lista_ordenada.html">Lista Ordenada</a></li>
-    <li><a href="lista_nao_ordenada.html">Lista Não Ordenada</a></li>
-  </ul>
+
+    <header></header>
+    <main>
+        <h1>Menu de Estudos de HTML</h1>
+        <ul>
+            <li><a href="titulo.html">Título</a></li>
+            <li><a href="subtitulo.html">Subtítulo</a></li>
+            <li><a href="paragrafos.html">Parágrafos</a></li>
+            <li><a href="formatacao.html">Formatação de Texto</a></li>
+            <li><a href="imagens.html">Imagens</a></li>
+            <li><a href="lista_ordenada.html">Lista Ordenada</a></li>
+            <li><a href="lista_nao_ordenada.html">Lista Não Ordenada</a></li>
+        </ul>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
