--- a/Aula04/paragrafos.html
+++ b/Aula04/paragrafos.html
@@ -5,17 +5,23 @@
   <title>Parágrafos em HTML</title>
 </head>
 <body>
-  <h1>O que são Parágrafos em HTML?</h1>
-  <p>Os parágrafos são definidos pela tag <code>&lt;p&gt;</code>. 
-     Eles servem para separar blocos de texto, facilitando a leitura.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;p&gt;Este é um parágrafo em HTML.&lt;/p&gt;
-  </pre>
+    <header></header>
+    <main>
+        <h1>O que são Parágrafos em HTML?</h1>
+        <p>Os parágrafos são definidos pela tag <code>&lt;p&gt;</code>. 
+            Eles servem para separar blocos de texto, facilitando a leitura.</p>
 
-  <p>Este é um parágrafo em HTML.</p>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;p&gt;Este é um parágrafo em HTML.&lt;/p&gt;
+        </pre>
 
-  <a href="index.html">Página Inicial</a>
+        <p>Este é um parágrafo em HTML.</p>
+
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
