--- a/Aula04/lista_nao_ordenada.html
+++ b/Aula04/lista_nao_ordenada.html
@@ -5,24 +5,29 @@
   <title>Lista Não Ordenada em HTML</title>
 </head>
 <body>
-  <h1>O que são Listas Não Ordenadas em HTML?</h1>
-  <p>As listas não ordenadas são criadas com a tag <code>&lt;ul&gt;</code>, 
-     e cada item é definido com <code>&lt;li&gt;</code>. 
-     Elas apresentam os itens com marcadores.</p>
+    <header></header>
+    <main>
+        <h1>O que são Listas Não Ordenadas em HTML?</h1>
+        <p>As listas não ordenadas são criadas com a tag <code>&lt;ul&gt;</code>, 
+            e cada item é definido com <code>&lt;li&gt;</code>. 
+            Elas apresentam os itens com marcadores.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;ul&gt;
-  &lt;li&gt;Item A&lt;/li&gt;
-  &lt;li&gt;Item B&lt;/li&gt;
-&lt;/ul&gt;
-  </pre>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;ul&gt;
+            &lt;li&gt;Item A&lt;/li&gt;
+            &lt;li&gt;Item B&lt;/li&gt;
+            &lt;/ul&gt;
+        </pre>
 
-  <ul>
-    <li>Item A</li>
-    <li>Item B</li>
-  </ul>
+        <ul>
+            <li>Item A</li>
+            <li>Item B</li>
+        </ul>
 
-  <a href="index.html">Página Inicial</a>
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
