--- a/Aula04/lista_ordenada.html
+++ b/Aula04/lista_ordenada.html
@@ -5,24 +5,30 @@
   <title>Lista Ordenada em HTML</title>
 </head>
 <body>
-  <h1>O que são Listas Ordenadas em HTML?</h1>
-  <p>As listas ordenadas são criadas com a tag <code>&lt;ol&gt;</code>, 
-     onde cada item é definido com <code>&lt;li&gt;</code>. 
-     Elas apresentam os itens numerados.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;ol&gt;
-  &lt;li&gt;Primeiro item&lt;/li&gt;
-  &lt;li&gt;Segundo item&lt;/li&gt;
-&lt;/ol&gt;
-  </pre>
+    <header></header>
+    <main>
+        <h1>O que são Listas Ordenadas em HTML?</h1>
+        <p>As listas ordenadas são criadas com a tag <code>&lt;ol&gt;</code>, 
+            onde cada item é definido com <code>&lt;li&gt;</code>. 
+            Elas apresentam os itens numerados.</p>
 
-  <ol>
-    <li>Primeiro item</li>
-    <li>Segundo item</li>
-  </ol>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;ol&gt;
+            &lt;li&gt;Primeiro item&lt;/li&gt;
+            &lt;li&gt;Segundo item&lt;/li&gt;
+            &lt;/ol&gt;
+        </pre>
 
-  <a href="index.html">Página Inicial</a>
+        <ol>
+            <li>Primeiro item</li>
+            <li>Segundo item</li>
+        </ol>
+
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
