--- a/Aula04/subtitulo.html
+++ b/Aula04/subtitulo.html
@@ -5,7 +5,10 @@
   <title>Subtítulos em HTML</title>
 </head>
 <body>
-  <h1>O que são Subtítulos em HTML?</h1>
+
+    <header></header>
+    <main>  
+        <h1>O que são Subtítulos em HTML?</h1>
   <p>Subtítulos normalmente são representados com <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code> e assim por diante, 
      para organizar hierarquicamente o conteúdo abaixo de um título principal.</p>
 
@@ -21,5 +24,8 @@
   <h3>Subseção 1.1.1</h3>
 
   <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
