--- a/Aula04/titulo.html
+++ b/Aula04/titulo.html
@@ -5,19 +5,25 @@
   <title>Títulos em HTML</title>
 </head>
 <body>
-  <h1>O que são Títulos (Heading) em HTML?</h1>
-  <p>Os títulos em HTML são criados com as tags <code>&lt;h1&gt;</code> até <code>&lt;h6&gt;</code>. 
-     Eles servem para organizar o conteúdo e indicar a importância do texto.</p>
 
-  <h2>Exemplo:</h2>
-  <pre>
-&lt;h1&gt;Título Principal&lt;/h1&gt;
-&lt;h2&gt;Subtítulo&lt;/h2&gt;
-  </pre>
+    <header></header>
+    <main>
+        <h1>O que são Títulos (Heading) em HTML?</h1>
+        <p>Os títulos em HTML são criados com as tags <code>&lt;h1&gt;</code> até <code>&lt;h6&gt;</code>. 
+            Eles servem para organizar o conteúdo e indicar a importância do texto.</p>
 
-  <h1>Título Principal</h1>
-  <h2>Subtítulo</h2>
+        <h2>Exemplo:</h2>
+        <pre>
+            &lt;h1&gt;Título Principal&lt;/h1&gt;
+            &lt;h2&gt;Subtítulo&lt;/h2&gt;
+        </pre>
 
-  <a href="index.html">Página Inicial</a>
+        <h1>Título Principal</h1>
+        <h2>Subtítulo</h2>
+
+        <a href="index.html">Página Inicial</a>
+    </main>
+    <footer></footer>
+  
 </body>
 </html>
