--- a/Aula05/exe/eventos.html
+++ b/Aula05/exe/eventos.html
@@ -1,5 +1,5 @@
 <form action="" method="">
-    <fieldset style="background-color: ;">
+    <fieldset>
         <legend>Dados Pessoais</legend>
 
         <input type="text" placeholder="Informe seu Nome" required>
