--- a/Aula11/Aula/index.html
+++ b/Aula11/Aula/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="grid.css">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <main id="container">
+
+    <!-- <main id="container">
         <section class="item">Sessão 01</section>
         <section class="item">Sessão 02</section>
         <section class="item">Sessão 03</section>
@@ -19,7 +21,21 @@
         <section class="item">Sessão 08</section>
         <section class="item">Sessão 09</section>
         <section class="item">Sessão 10</section>
-    </main>
+    </main> -->
+
+    <div class="containerarea">
+
+        <header>Cabeçalho</header>
+
+        <aside>Aside</aside>
+        <article>Article</article>
+        <section>Sessao</section>
+
+        <footer>Rodape</footer>
+
+    </div>
+
 
 </body>
+
 </html>
