--- a/Aula13/repeticao/repeticao.html
+++ b/Aula13/repeticao/repeticao.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>    
-    <p id="resultado"></p>
-    <p id="materia"></p>
-
-    <p id="resultadoNota"></p>
-    <script src="decisao.js"></script>
+<body>
+    
+    <p id="repeticao"></p>
+    <script src="repeticao.js"></script>
 </body>
 </html>
