--- a/Aula13/repeticao/desafio/index.html
+++ b/Aula13/repeticao/desafio/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>    
+<body>
+    
+    <input type="number" id="numero" placeholder="Digite um número">
+    <button id="botao">Click</button>
     <p id="resultado"></p>
-    <p id="materia"></p>
 
-    <p id="resultadoNota"></p>
-    <script src="decisao.js"></script>
+    <script src="script.js"></script>
+
+
 </body>
 </html>
